[package]
name = "attestation"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { rev = "sgx_1.1.0", git = "https://github.com/mesalock-linux/anyhow-sgx.git" }
