[package]
name = "attestation"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { rev = "sgx_1.1.2", git = "https://github.com/mesalock-linux/anyhow-sgx.git" }
webpki = { rev = "sgx_1.1.2", git = "https://github.com/mesalock-linux/webpki" }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["net"] }
http_req = { rev = "v1.1.2", git = "https://github.com/mesalock-linux/http_req-sgx" }
